--- a/QCloud.CosApi.Client/QCloud.CosApi.Client.csproj
+++ b/QCloud.CosApi.Client/QCloud.CosApi.Client.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
+    <Description>Tencent Cloud Object Storage SDK for .NET Core</Description>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Cnblogs team</Authors>
     <PackageProjectUrl>https://github.com/cnblogs/cos-donet-sdk-v4</PackageProjectUrl>
